# NetworkingPrototype

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: FindVRInkApi.cmake  FindZSpace.cmake
configuration/: config.json
src/: CMakeLists.txt
src/appcore/: CMakeLists.txt  applicationObjects.cpp  messageEncoder.cpp
src/appcore/include/appcore/: applicationObjects.h  messageEncoder.h  messages.h  serializationHelper.h  serializationTypes.h
src/barco/: CMakeLists.txt  barcoSystem.cpp  barcoUartFrame.cpp  barcoV2Protocol.cpp
src/barco/include/barco/: barcoSystem.h  barcoSystemImpl.h  barcoUartFrame.h  barcoV2Protocol.h
src/clientApp/: CMakeLists.txt  appInitializer.cpp  applicationActionsWidget.cpp  autostereoscopicOpenGLRenderWindow.cpp  camera.cpp  clientApp.cpp  credentialsDialog.cpp  darkStyle.cpp  ipv4Widget.cpp  main.cpp  mainWindow.cpp  networkSessionConnectionDialog.cpp  networkSessionSelectionDialog.cpp  peerConnectionWindow.cpp  peerDelegate.cpp  trackerEventProcessor.cpp  trackingManager.cpp  uiActions.cpp
src/clientApp/include/clientApp/: appInitializer.h  applicationActionsWidget.h  autostereoscopicOpenGLRenderWindow.h  camera.h  clientApp.h  credentialsDialog.h  darkStyle.h  ipv4Widget.h  mainWindow.h  networkSessionConnectionDialog.h  networkSessionSelectionDialog.h  peerConnectionWindow.h  peerDelegate.h  trackerEventProcessor.h  trackingManager.h  uiActions.h
src/clientApp/ui/: applicationActionsWidget.ui  connectionWindow.ui  credentialsDialog.ui  mainWindow.ui  networkSessionConnectionDialog.ui  networkSessionSelectionDialog.ui
src/common/: CMakeLists.txt
src/common/include/common/: coreTypes.h  crcUtils.h
src/common/src/: crcUtils.cpp
src/config/: CMakeLists.txt  config.cpp
src/config/include/config/: config.h
src/display/: CMakeLists.txt  barcoDisplay.cpp  displayInterface.cpp  displayUtilities.cpp  genericDisplay.cpp  parseEDID.cpp  zspaceDisplay.cpp
src/display/include/display/: barcoDisplay.h  displayInfo.h  displayInterface.h  displayUtilities.h  edid.h  edidInfo.h  genericDisplay.h  zspaceDisplay.h
src/interaction/: CMakeLists.txt  interactor.cpp
src/interaction/include/interaction/: customQEvents.h  interactor.h
src/networking/: CMakeLists.txt
src/networking/include/networking/: connection.h  connectionImpl.h  networkMessage.h  networkMessageParser.h  tcpServer.h
src/networking/src/: connection.cpp  networkMessage.cpp  networkMessageParser.cpp  tcpServer.cpp
src/networking/ui/: clientWindow.ui  inputCredentialsDialog.ui  networkWindow.ui  serverWindow.ui  userItem.ui
src/serverApp/: CMakeLists.txt  main.cpp  serverApp.cpp
src/serverApp/include/serverApp/: serverApp.h
src/tracking/: CMakeLists.txt  barcoHeadTarget.cpp  barcoHeadTargetBuilder.cpp  ewmaFilter.cpp  headTargetInterface.cpp  interactionDeviceInterface.cpp  leapMotionClient.cpp  leapMotionInteractionDevice.cpp  leapMotionInteractionDeviceBuilder.cpp  vrInkInteractionDevice.cpp  vrInkInteractionDeviceBuilder.cpp  zSpaceHeadTarget.cpp  zSpaceHeadTargetBuilder.cpp  zSpaceInteractionDevice.cpp  zSpaceInteractionDeviceBuilder.cpp
src/tracking/include/tracking/: InteractionDeviceBuilderInterface.h  barcoHeadTarget.h  barcoHeadTargetBuilder.h  ewmaFilter.h  headTargetBuilderInterface.h  headTargetInterface.h  interactionDeviceInterface.h  leapMotionClient.h  leapMotionInteractionDevice.h  leapMotionInteractionDeviceBuilder.h  trackingTypes.h  trackingUtils.h  vrInkInteractionDevice.h  vrInkInteractionDeviceBuilder.h  zSpaceHeadTarget.h  zSpaceHeadTargetBuilder.h  zSpaceInteractionDevice.h  zSpaceInteractionDeviceBuilder.h
src/vtkUtils/: CMakeLists.txt  vtkErrorObserver.cpp
src/vtkUtils/include/vtkUtils/: vtkCommonConversions.h  vtkErrorObserver.h  vtkGeneralizedCallbackCommand.h
src/widgets/: CMakeLists.txt  laserWidget.cpp  planeWidget.cpp  splineWidget.cpp  volumeWidget.cpp
src/widgets/include/widgets/: laserWidget.h  planeWidget.h  splineWidget.h  volumeWidget.h  widgetInterface.h
src/zspace/: CMakeLists.txt  zSpaceContextManager.cpp  zSpaceUtilities.cpp
src/zspace/include/zspace/: zSpaceContextManager.h  zSpaceUtilities.h
test/: CMakeLists.txt  testMessageParser.cpp
